# Nova

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  scene.toml
assets/aircraft/: E 45 Aircraft_obj.mtl
assets/gun/: gun.mtl
dependencies/: CMakeLists.txt
dependencies/oidn/include/OpenImageDenoise/: version.h
dependencies/oidn/lib/: libOpenImageDenoise.so.0
dependencies/oidn/lib/cmake/OpenImageDenoise/: OpenImageDenoiseConfig-release.cmake  OpenImageDenoiseConfig.cmake  OpenImageDenoiseConfigVersion.cmake
include/glad/: glad.c  glad.h
include/imgui/: ImGuiFileDialog.cpp  ImGuiFileDialogConfig.h
kernels/: anti_aliasing.hpp  brdf.hpp  configuration.cl  constants.cl  constants.hpp  intersection.cl  intersection.hpp  kernel.cl  kernels.cu  kernels.hpp  light.hpp  material.hpp  matrix.cl  random.hpp  raytrace.cl  raytrace.hpp  shading.cl  texture.cl  transforms.cl  transforms.hpp  types.cl  types.hpp
kernels/backend/: assertion.hpp  atomic.hpp  image.hpp  kernel.hpp  math_constants.hpp  vector.hpp
kernels/backend/common/: image.hpp  math_constants.hpp  static_if.hpp  vector.hpp
kernels/backend/cuda/: atomic.hpp  image.hpp  kernel.hpp  math_constants.hpp  static_if.hpp  swizzle.hpp  vector.hpp  vector_traits.hpp
kernels/backend/opencl/: assertion.hpp  image.hpp  kernel.hpp  swizzle.hpp  type_traits.hpp  vector.hpp
kernels/cuda/: anti_aliasing.hpp  constants.cu  constants.h  constants.hpp  entrypoint.cu  entrypoint.hpp  intersection.cu  intersection.h  intersection.hpp  math_constants.h  matrix.cu  matrix.h  matrix.hpp  raytrace.cu  raytrace.h  raytrace.hpp  texture.cu  texture.h  texture.hpp  transforms.h  transforms.hpp  types.h  types.hpp  vector_conversions.h  vector_math.h
kernels/entrypoint/cuda/: entrypoint.cu  entrypoint.hpp
kernels/entrypoint/opencl/: entrypoint.cpp
kernels/new/: anti_aliasing.hpp  constants.hpp  entrypoint.cpp  intersection.hpp  kernels.cu  kernels.hpp  material.hpp  matrix.hpp  raytrace.hpp  texture.hpp  types.hpp
kernels/opencl/: anti_aliasing.cl  constants.cl  entrypoint.cpp  intersection.cl  matrix.cl  raytrace.cl  texture.cl  transforms.cl  types.cl
src/: configuration.h  constants.h  constants.hpp  kernel_types.h  main.cpp  shared_constants.hpp
src/acceleration/: bvh.cpp  bvh.h
src/backend/: accelerator.h  accelerator.hpp  backend.h  error.h  types.h  types.hpp  utils.h
src/backend/common/types/: types.h  types.hpp  wrapper.h  wrapper.hpp
src/backend/common/utils/: utils.hpp
src/backend/cuda/: entry.h  entry.hpp  error.h  types.h
src/backend/cuda/accelerator/: accelerator.cpp  accelerator.h  accelerator.hpp
src/backend/cuda/types/: buffer.cpp  buffer.h  buffer.hpp  error.cpp  error.h  error.hpp  flags.h  flags.hpp  image2D.cpp  image2D.h  image2D.hpp  image2D_array.h  image2D_array.hpp  image2D_read.h  image2D_read.hpp  image2D_readwrite.hpp  image2D_write.h  image2D_write.hpp  types.h  types.hpp  vector_types.h  vector_types.hpp
src/backend/opencl/: accelerator.cpp  accelerator.h  entry.h  entry.hpp  error.h  types.h
src/backend/opencl/accelerator/: accelerator.cpp  accelerator.h  accelerator.hpp
src/backend/opencl/types/: buffer.h  buffer.hpp  error.cpp  error.h  error.hpp  flags.h  flags.hpp  image2D.h  image2D.hpp  image2D_array.h  image2D_array.hpp  image2D_read.h  image2D_read.hpp  image2D_readwrite.hpp  image2D_write.h  image2D_write.hpp  types.h  types.hpp  vector_types.h  vector_types.hpp  wrapper.h
src/backend/opencl/utils/: build_args.h  build_args.hpp  compatibility.h  compatibility.hpp  error.h  kernel.h  kernel.hpp
src/bvh/: bvh.cpp  bvh.h  bvh.hpp
src/camera/: camera.cpp  camera.h  camera.hpp
src/core/: raytracer.cpp  raytracer.h  raytracer.hpp  scene_parser.cpp  scene_parser.h  scene_parser.hpp
src/intersectables/: aabb.cpp  aabb.h  aabb.hpp  intersectable_manager.cpp  intersectable_manager.h  intersectable_manager.hpp  material.h  triangle.cpp  triangle.h  triangle.hpp
src/kernel_types/: area_light.hpp  bvh_node.h  bvh_node.hpp  eye_coords.h  eye_coords.hpp  intersection.h  kernel_constants.h  kernel_constants.hpp  matrix.h  matrix.hpp  ray.h  scene_params.hpp  triangle.h  triangle.hpp  wavefront.hpp
src/material/: material_loader.cpp  material_loader.h  material_loader.hpp  sky_loader.cpp  sky_loader.hpp
src/model/: model.cpp  model.h  model.hpp
src/scene/: area_light.hpp  ground_plane.hpp  scene.cpp  scene.hpp  scene_parser.cpp  scene_parser.hpp
src/util/: error.h  utils.cpp  utils.h
src/util/exception/: exception.cpp  exception.h  exception.hpp
src/util/file/: fileutils.cpp  fileutils.h  fileutils.hpp
src/util/image/: imageutils.cpp  imageutils.h  imageutils.hpp
src/util/kernel/: kernelutils.h
src/util/logging/: logging.cpp  logging.h  logging.hpp
src/util/opencl/: clutils.h
src/util/profiling/: profiling.h  profiling.hpp  timescope.cpp  timescope.h  timescope.hpp  timetree.cpp  timetree.h  timetree.hpp
src/util/serialization/: serialization.h  serialization.hpp
src/vector/: vector_conversions.hpp  vector_types.hpp  vector_utils.hpp
src/window/: window.cpp  window.hpp
tests/: CMakeLists.txt
tests/src/intersectables/: aabb.cpp  triangle.cpp
