# Assimp
set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT CACHE BOOL OFF)
set(ASSIMP_BUILD_ALL_EXPORTERS_BY_DEFAULT CACHE BOOL OFF)
set(ASSIMP_NO_EXPORT ON)
set(ASSIMP_BUILD_ASSIMP_TOOLS CACHE BOOL OFF)
set(ASSIMP_BUILD_TESTS CACHE BOOL OFF)
set(ASSIMP_BUILD_OBJ_IMPORTER ON)
set(ASSIMP_BUILD_GLTF_IMPORTER ON)
add_subdirectory(assimp)

# GLFW
set(GLFW_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/glfw/include/ PARENT_SCOPE)
set(GLFW_BUILD_EXAMPLES CACHE BOOL OFF)
set(GLFW_BUILD_TESTS CACHE BOOL OFF)
set(GLFW_BUILD_DOCS CACHE BOOL OFF)
add_subdirectory(glfw)

# OIDN
include(${CMAKE_CURRENT_SOURCE_DIR}/oidn/lib/cmake/OpenImageDenoise/OpenImageDenoiseConfig.cmake)
set_target_properties(OpenImageDenoise PROPERTIES IMPORTED_GLOBAL TRUE)
set(OIDN_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/oidn/include/OpenImageDenoise PARENT_SCOPE)